--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Hendrik Eisenblätter",
   "license": "ISC",
   "devDependencies": {
-    "svelte": "^3.49.0"
+    "svelte": "^3.49.0",
+    "typescript": "^4.7.4"
   }
 }
