--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "/dist"
   ],
   "scripts": {
+    "build": "npx tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
