--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha --reporter spec --require ts-node/register test/**/*.test.ts"
   },
   "keywords": [
     "Svelte",
